--- a/src/examples/heatmap-table/app.css
+++ b/src/examples/heatmap-table/app.css
@@ -1,3 +1,5 @@
+/* TODO: make it easier to style */
+
 body {
   background-color: hsl(210, 16%, 13%);
   color: white;
@@ -69,6 +71,18 @@ input {
   display: flex;
 }
 
+.cursor {
+  position: absolute;
+  right: -35px;
+
+  width: 25px;
+  height: 5px;
+  margin-bottom: -2.5px;
+
+  background-color: white;
+  /* border-radius: 2.5px; */
+}
+
 .heatmap-bar .gradient {
   height: 100%;
   width: 20px;
@@ -114,6 +128,7 @@ tr:nth-child(odd) {
 }
 
 .heatmap-cell {
+  cursor: pointer;
   /* padding: 10px; */
   position: relative;
 
@@ -122,6 +137,7 @@ tr:nth-child(odd) {
 }
 
 .heatmap-cell__background {
+  transition: all 0.2s ease-in-out;
   background: #ff0000;
 
   position: absolute;
@@ -130,6 +146,11 @@ tr:nth-child(odd) {
 
   width: 100%;
   height: 100%;
+}
+
+.heatmap-cell:hover .heatmap-cell__background {
+  transition: all 0.2s ease-in-out;
+  background: #ff4949;
 }
 
 /* .heatmap-cell::after {
