--- a/src/examples/heatmap-table/app.css
+++ b/src/examples/heatmap-table/app.css
@@ -1,3 +1,5 @@
+@import url("./base.css");
+
 /* TODO: make it easier to style */
 
 :root {
@@ -8,63 +10,6 @@
   /* BLUE */
   --heatmap-cell-color: hsl(200, 100%, 50%);
   --heatmap-cell-color-hover: hsl(200, 100%, 64%);
-}
-
-body {
-  background-color: hsl(210, 16%, 13%);
-  color: white;
-  display: flex;
-
-  flex-direction: column;
-  align-items: center;
-
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.current-max {
-  text-align: center;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 15px;
-}
-
-input {
-  background-color: rgba(255, 255, 255, 0.1);
-
-  font-size: 16px;
-  color: white;
-
-  padding: 10px;
-
-  border: 0;
-  border-radius: 5px;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.form-group label {
-  font-weight: bold;
-}
-
-.configuration-inputs {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-
-  padding: 20px;
 }
 
 .heatmap {
@@ -87,7 +32,7 @@ input {
 
   width: 25px;
   height: 5px;
-  margin-bottom: -2.5px;
+  margin-bottom: -5px;
 
   background-color: white;
   /* border-radius: 2.5px; */
@@ -119,26 +64,6 @@ input {
   /* height: calc(100% - var(--spacing)); */
   /* margin-top: calc(var(--spacing) / 2); */
   margin-right: 10px;
-}
-
-.heatmap__table {
-  margin: 25px;
-}
-
-table,
-tbody,
-tr,
-td,
-th {
-  border: 0;
-}
-
-tr:nth-child(odd) {
-  background-color: rgba(0, 0, 0, 0.3);
-}
-
-.row-header {
-  padding: 15px;
 }
 
 .heatmap-cell {
