--- a/src/examples/heatmap-table/app.css
+++ b/src/examples/heatmap-table/app.css
@@ -26,7 +26,7 @@
 
 .heatmap-bar {
   position: absolute;
-  right: -35px;
+  right: 0px;
   bottom: 0;
 
   height: 100%;
@@ -36,9 +36,8 @@
 
 .cursor {
   position: absolute;
-  right: -35px;
 
-  width: 25px;
+  width: 20px;
   height: 5px;
   margin-bottom: -5px;
 
@@ -63,15 +62,13 @@
   /* just a SCSS variable name */
   --spacing: 20px;
 
-  text-align: right;
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 
   /* height: calc(100% - var(--spacing)); */
   /* margin-top: calc(var(--spacing) / 2); */
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .heatmap-cell {
