--- a/src/examples/heatmap-table/app.css
+++ b/src/examples/heatmap-table/app.css
@@ -65,10 +65,35 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: stretch;
 
   /* height: calc(100% - var(--spacing)); */
   /* margin-top: calc(var(--spacing) / 2); */
   margin-left: 10px;
+}
+
+.indices .index {
+  --spacing: 30px;
+
+  flex: 100%;
+  width: 100%;
+
+  cursor: pointer;
+  background: transparent;
+
+  border: 0;
+  outline: 0;
+
+  font-size: 16px;
+  color: white;
+  text-align: left;
+
+  margin-left: calc(-1 * var(--spacing));
+  padding-left: var(--spacing);
+}
+
+.indices .index:not(:last-child) {
+  border-bottom: 1px solid white;
 }
 
 .heatmap-cell {
@@ -78,6 +103,15 @@
 
   text-align: center;
   vertical-align: middle;
+}
+
+.--with-selection .heatmap-cell:not(.--selected) {
+  color: transparent;
+  background-color: transparent;
+}
+
+.--with-selection .heatmap-cell:not(.--selected) .heatmap-cell__background {
+  background: transparent;
 }
 
 .heatmap-cell__background {
