--- a/src/examples/heatmap-table/app.css
+++ b/src/examples/heatmap-table/app.css
@@ -1,25 +1,5 @@
 @import url("./base.css");
 
-/* TODO: make it easier to style */
-
-:root {
-  /* RED */
-  --heatmap-cell-color: hsl(0, 100%, 50%);
-  --heatmap-cell-color-hover: hsl(0, 100%, 64%);
-
-  /* BLUE */
-  --heatmap-cell-color: hsl(200, 100%, 50%);
-  --heatmap-cell-color-hover: hsl(200, 100%, 64%);
-
-  /* GREEN */
-  --heatmap-cell-color: hsl(100, 100%, 50%);
-  --heatmap-cell-color-hover: hsl(100, 100%, 64%);
-
-  /* PURPLE */
-  --heatmap-cell-color: hsl(300, 100%, 50%);
-  --heatmap-cell-color-hover: hsl(300, 100%, 64%);
-}
-
 .heatmap {
   position: relative;
 }
@@ -41,7 +21,7 @@
   height: 5px;
   margin-bottom: -5px;
 
-  background-color: white;
+  background-color: var(--text-color);
   /* border-radius: 2.5px; */
 }
 
@@ -76,7 +56,7 @@
   --spacing: 30px;
 
   flex: 100%;
-  width: 100%;
+  width: calc(100% + var(--spacing));
 
   cursor: pointer;
   background: transparent;
@@ -85,7 +65,7 @@
   outline: 0;
 
   font-size: 16px;
-  color: white;
+  color: var(--text-color);
   text-align: left;
 
   margin-left: calc(-1 * var(--spacing));
@@ -93,7 +73,7 @@
 }
 
 .indices .index:not(:last-child) {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid var(--text-color);
 }
 
 .heatmap-cell {
@@ -130,14 +110,6 @@
   transition: all 0.2s ease-in-out;
   background: var(--heatmap-cell-color-hover);
 }
-
-/* .heatmap-cell::after {
-  background: #ff0000;
-
-  position: absolute;
-  width: 100%;
-  height: 100%;
-} */
 
 .heatmap-cell__value {
   position: relative;
