--- a/src/examples/heatmap-table/base.css
+++ b/src/examples/heatmap-table/base.css
@@ -1,12 +1,53 @@
+:root {
+  --background-color: hsl(210, 16%, 13%);
+  --text-color: white;
+  --heatmap-cell-color: hsl(0, 100%, 50%);
+  --heatmap-cell-color-hover: hsl(0, 100%, 64%);
+}
+
 body {
-  background-color: hsl(210, 16%, 13%);
-  color: white;
+  background-color: var(--background-color);
+  color: var(--text-color);
   display: flex;
 
   flex-direction: column;
   align-items: center;
 
   font-family: Arial, Helvetica, sans-serif;
+}
+
+body.light {
+  --background-color: white;
+  --text-color: hsl(210, 16%, 13%);
+  --light-color: rgba(0, 0, 0, 0.1);
+  --odd-row: rgba(0, 0, 0, 0.1);
+}
+
+body.dark {
+  --background-color: hsl(210, 16%, 13%);
+  --text-color: white;
+  --light-color: rgba(255, 255, 255, 0.1);
+  --odd-row: rgba(0, 0, 0, 0.3);
+}
+
+body.red {
+  --heatmap-cell-color: hsl(0, 100%, 50%);
+  --heatmap-cell-color-hover: hsl(0, 100%, 64%);
+}
+
+body.blue {
+  --heatmap-cell-color: hsl(200, 100%, 50%);
+  --heatmap-cell-color-hover: hsl(200, 100%, 64%);
+}
+
+body.green {
+  --heatmap-cell-color: hsl(100, 100%, 50%);
+  --heatmap-cell-color-hover: hsl(100, 100%, 64%);
+}
+
+body.purple {
+  --heatmap-cell-color: hsl(300, 100%, 50%);
+  --heatmap-cell-color-hover: hsl(300, 100%, 64%);
 }
 
 .header {
@@ -25,10 +66,10 @@ body {
 }
 
 input {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--light-color);
 
   font-size: 16px;
-  color: white;
+  color: var(--text-color);
 
   padding: 10px;
 
@@ -68,7 +109,7 @@ th {
 }
 
 tr:nth-child(odd) {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: var(--odd-row);
 }
 
 th {
